changelog for "tuxmath"
2007.Mar.15 (svn.debian.org/tux4kids - revision ??? & ???)
  Build:
    * First revision adds Xcode building for MacOSX
    * Second commit removes the earlier (incomplete) approach to a
	UNIX-style build. (This was abandoned mainly for reasons of
	building Universal Binaries---the SDL Frameworks supposedly
	only work with Xcode)
	
        Tim Holy < holy at wustl period edu >
	
2007.Mar.08  (svn.debian.org/tux4kids - revision 125)
  Game:
    * High scores now saved to and read from file, not yet
      visible to game player.
    * svn repository move completed.

      David Bruce <dbruce@tampabay.rr.com>

2007.Mar.05  (https://svn.tux4kids.net/tuxmath/ - revision 75)
  Code:
    * Most of tuxtype-derived code now using functions in
      fileops.c to load - trying to make this more consistent
      and unified. Fixes problems finding data files on some
      Windows machines.
    * Beginning of audit of all pointers to prevent segfaults and
      other memory management errors.
  Game:
    * Data structures and several functions in place for high score
      lists (nothing user-visible yet).

      Last commit at svn.tux4kids.net before move to Alioth.

      David Bruce <dbruce@tampabay.rr.com>

2007.Feb.12  (https://svn.tux4kids.net/tuxmath/ - revision 74)
  Code:
    * Fixed MC_FORMULA_LEN bug causing long comet strings to
      drop last character.
    * Added new fields to game_options (bonus_comet_interval,
      bonus_speed_ratio) with relevant support functions.
    * Further implementation and cleanup of new menus.
      David Bruce <dbruce@tampabay.rr.com>

  Game:
    * Implementation of bonus comets that cause an igloo to
      be rebuilt.
      Tim Holy <holy@wustl.edu>
    * Many additional lesson files.
      David Bruce <dbruce@tampabay.rr.com>

  Build:
    * Andika font now default, included under data/fonts.
      Karl Ove Hufthammer <karl@huftis.org>

2007.Jan.31 (https://svn.tux4kids.net/tuxmath/ - revision 72)