@@ -41,7 +41,7 @@
 
 #define RES_X	640
 #define RES_Y	480
-#define BPP	16	
+#define BPP	32	
 
 
 #define MAX_SPRITE_FRAMES 30
@@ -129,8 +129,8 @@ typedef struct {
 /* Menu Prototypes */
 enum Game_Type { 
 	LESSONS, ARCADE, OPTIONS, GAME_OPTIONS, QUIT_GAME,
-        ARCADE_CADET, ARCADE_SCOUT, ARCADE_RANGER, ARCADE_ACE, MAIN,
-        INTERFACE_OPTIONS, HELP, CREDITS, PROJECT_INFO,
+        ARCADE_CADET, ARCADE_SCOUT, ARCADE_RANGER, ARCADE_ACE, HIGH_SCORES,
+        MAIN, INTERFACE_OPTIONS, HELP, CREDITS, PROJECT_INFO,
         INSTRUCT_CASCADE, CASCADE1, CASCADE2, CASCADE3, CASCADE4,
 	INSTRUCT_LASER,    LASER1,    LASER2,    LASER3,    LASER4,
 	FREETYPE, ASDF, ALL, SET_LANGUAGE, EDIT_WORDLIST,
